--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.12",
     "@ai-sdk/xai": "^1.2.15",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@vapi-ai/web": "^2.2.6",
     "ai": "^4.3.9",
+    "bun": "^1.2.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "datejs": "^1.0.0-rc3",
@@ -23,8 +25,13 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "lucide-react": "^0.488.0",
+    "mammoth": "^1.9.0",
+    "mime-types": "^3.0.1",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "pdf-text-extract": "^1.5.0",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
